<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout android:layout_height="250dp"
        android:layout_width="match_parent"
        android:id="@+id/Layout1"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView16"
            style="@style/text_adjustments_rows"
            android:layout_width="104dp"
            android:layout_height="match_parent"
            android:background="@color/red500"
            android:text="@string/red" />

        <TextView
            android:id="@+id/textView17"
            style="@style/text_adjustments_rows"
            android:layout_width="104dp"
            android:layout_height="match_parent"
            android:background="@color/green500"
            android:text="@string/green" />

        <TextView
            android:id="@+id/textView18"
            style="@style/text_adjustments_rows"
            android:layout_width="104dp"
            android:layout_height="match_parent"
            android:background="@color/blue500"
            android:text="@string/blue" />

            <TextView
                android:id="@+id/textView19"
                style="@style/text_adjustments_rows"
                android:layout_width="101dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="311dp"
                android:background="@color/yellow500"
                android:text="@string/yellow" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/Layout1">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:text="@string/row1"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:text="@string/row2"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:text="@string/row3"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/row4"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>