<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:id="@+id/textView"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@color/red500"
        android:text="@string/red"
        style="@style/text_adjustments"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@color/orange500"
        android:text="@string/orange"
        style="@style/text_adjustments"
        android:layout_below="@id/textView"
        android:layout_toEndOf="@id/textView"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/yellow"
        android:background="@color/yellow500"
        style="@style/text_adjustments"
        android:layout_below="@id/textView2"
        android:layout_toEndOf="@id/textView2"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@color/green500"
        android:text="@string/green"
        style="@style/text_adjustments"
        android:layout_below="@id/textView3"
        android:layout_toEndOf="@id/textView3"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/blue"
        android:background="@color/blue500"
        style="@style/text_adjustments"
        android:layout_below="@id/textView4"
        android:layout_toStartOf="@id/textView4"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/indigo"
        android:background="@color/indigo500"
        style="@style/text_adjustments"
        android:layout_below="@id/textView5"
        android:layout_toStartOf="@id/textView5"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/pink"
        android:background="@color/pink500"
        style="@style/text_adjustments"
        android:layout_below="@id/textView6"
        android:layout_toStartOf="@id/textView6"/>
</RelativeLayout>